ATLAS-1374 clean up